--- a/django_app/templates/common/base.html
+++ b/django_app/templates/common/base.html
@@ -37,6 +37,9 @@
           <li>
             <a href="{% url 'video:bookmark_list' %}">Video</a>
           </li>
+          <li>
+            <a href="{% url 'photo:album_list' %}">Photo</a>
+          </li>
           <!--<li>-->
             <!--<a href="#">-->
               <!--<span class="glyphicon glyphicon-plus"></span> New post-->
