Revise some codes of Photo app

--- a/django_app/templates/photo/album_list.html
+++ b/django_app/templates/photo/album_list.html
@@ -9,7 +9,7 @@
 
 
 {% empty %}
-<p>NO albums available. </p>
+<p>NO albums available. <a href="{% url 'photo:album_add' %}">앨범 추가하기</a></p>
 
 {% endfor %}
 {% endblock content %}
