--- a/django_app/templates/photo/album_detail.html
+++ b/django_app/templates/photo/album_detail.html
@@ -3,16 +3,20 @@
 {% block content %}
 <h3>{{ album.title }}</h3>
 <a href="{% url 'photo:photo_add' album_id=album.id %}">
-    <button>사진 추가</button></a>
+    <button style="margin-bottom: 40px;">사진 추가</button></a>
 <ul>
 {% for photo in photos %}
 <li>
-    <p>{{ photo.title }}</p>
+    <h4>{{ photo.title }}</h4>
+    <p>{{ photo.description }}</p>
+
     <img src="{{ photo.img.url }}" alt="사진 꼭이요~!" style="display:block;">
     <a href="{% url 'photo:photo_like' photo_id=photo.id %}"><button>좋아요 ㅎㅎ</button></a>
     <span>{{ photo.photolike_set.count }}</span>
     <a href="{% url 'photo:photo_dislike' photo_id=photo.id %}"><button style="margin:10px 0 40px 0;">싫어요 ㅋ</button></a>
     <span>{{ photo.photodislike_set.count }}</span>
+    <a href="{% url 'photo:photo_delete' photo.id %}"><span>사진 삭제</span></a>
+
 </li>
 {% empty %}
 <p> NO photos now.</p>
