--- a/django_app/templates/common/base.html
+++ b/django_app/templates/common/base.html
@@ -78,7 +78,7 @@
     </div>
     {% endif %}
 
-    <div>
+    <div style="position:relative">
       {% block content %}
       {% endblock %}
     </div>
