--- a/django_app/templates/common/base.html
+++ b/django_app/templates/common/base.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.js"
+  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+  crossorigin="anonymous"></script>
   <title>이한영의 홈페이지에 오신것을 환영합니다</title>
 
   <!-- https://tutorial.djangogirls.org/ko/css/ -->
@@ -14,6 +18,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{% static 'css/common.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/blog.min.css' %}">
+
+  <!-- custom js -->
+  <script src="{% static 'js/base.js' %}"></script>
+
 </head>
 <body>
   <nav class="navbar navbar-default navbar-static-top">
@@ -83,5 +91,8 @@
       {% endblock %}
     </div>
   </div>
+{% block script %}
+
+{% endblock %}
 </body>
 </html>
